still having issues having crystal images aligning & having the game end with the player winning or loosing

--- a/crystal game/assets/CSS/style.css
+++ b/crystal game/assets/CSS/style.css
@@ -3,6 +3,7 @@ body{
     background-color: rgb(2, 214, 252);
     display: grid;
     color: #e3dac9;
+    text-align: center;
     font-family: serif;
 }
 
@@ -132,5 +133,7 @@ body{
     text-align: center;
 }
 .game{
-    grid-column-start: game;
+.game{
+    display: flex;
+    flex-direction: row;
 }
